app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";


/* mixins, variables, etc. */

$gray-medium-light: #eaeaea;

@mixin box_sizing {
  -moz-box-sizing:    border-box;
  -webkit-box-sizing: border-box;
  box-sizing:         border-box;
}

@mixin no_select {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: -moz-none;
  -o-user-select: none;
  user-select: none;
}

@mixin flex_box {
  display: box;
  display: -webkit-box;
}

@mixin box_orient_vertical {
  -webkit-box-orient: vertical;
  box-orient: vertical;
}

@mixin box_orient_horizontal {
  -webkit-box-orient: horizontal;
  box-orient: horizontal;
}


@mixin box_flex_1 {
  -webkit-box-flex: 1;
  box-flex: 1;
}


/* universal */

body {
  padding-top: 60px;
/*  position: fixed;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;*/
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: #777;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}


/* header */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  /*text-transform: uppercase;*/
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}

.header {
  padding-left: 10px;
  padding-right: 10px;
}

/* footer */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: #777;
}

footer a {
  color: #555;
}

footer a:hover {
  color: #222;
}

footer small {
  float: left;
}

footer ul {
  float: right;
  list-style: none;
}

footer ul li {
  float: left;
  margin-left: 15px;
}

/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

/* sidebar */

aside {
  section.user_info {
    margin-top: 20px;
  }
  section {
    padding: 10px 0;
    margin-top: 20px;
    &:first-child {
      border: 0;
      padding-top: 0;
    }
    span {
      display: block;
      margin-bottom: 3px;
      line-height: 1;
    }
    h1 {
      font-size: 1.4em;
      text-align: left;
      letter-spacing: -1px;
      margin-bottom: 3px;
      margin-top: 0px;
    }
  }
}

.gravatar {
  float: left;
  margin-right: 10px;
}

.gravatar_edit {
  margin-top: 15px;
}


/* forms */

input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}

#error_explanation {
  color: red;
  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}

.field_with_errors {
  @extend .has-error;
  .form-control {
    color: $state-danger-text;
  }
}

.checkbox {
  margin-top: -10px;
  margin-bottom: 10px;
  span {
    margin-left: 20px;
    font-weight: normal;
  }
}

#session_remember_me {
  width: auto;
  margin-left: 0;
}

/* Projects */
#projects-page {
  height: 100%;

  padding-left: 40px;
  padding-right: 40px;
  @include box_sizing;

  .list-group-item {
    margin-right: 2px;
    @include box_sizing;
  }

  .project-set {
    .name {
      width: 50%;
    }

    tbody tr {
      cursor: pointer;
    }
  }

  /*.project-set {
    .project, .project-main {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      flex-wrap: nowrap;
      align-items: stretch;
      align-content: stretch;
    }
    .project-main {
      flex-grow: 1;
      margin-right: 5px;

      .name { width: 70%;}
      .email { width: 20%;}
      .date { width: 15%;}
    }
  }*/



/*  .project-set .project {
    .name { width: 70%; }
    .email { width: 10%; }
    .date { width: 10%; }
    .trash { width: 30px;}
  }
*/
  .project-set {
    padding: 5px;
    @include box_sizing;
  }

  h2 {
    margin-top: 0;
    text-align: center;
    margin-bottom: 0;
    font-size: 2em;
  }

  ul {
    margin-top: .5em;
  }

  li {

  }

}

.project-view {
  .file {

  }
  .entry, .directory {
    @include box_sizing;
    cursor: pointer;
    font-size: 12pt;
    @include no_select;
  }
  .entry .directory {
    margin-left: 25px;
  }

  .collapsed {
    display: none;
  }

  .directory-name {
    .collapsed, .expanded {
      color: #888;
      margin-right: 3px;
    }
  }

  .button-bar {
    margin-bottom: 5px;
  }

  .main {
    /*position: absolute;*/
    /*overflow: hidden;*/
    position: fixed;
    top: 51px;
    bottom: 0px;
    @include flex_box;
    @include box_orient_vertical;
  }

  #project-view-header{
/*    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;*/
  }

  .button-bar .btn-group {
    display: inline-block !important;
  }

  .highlightable {
    display: inline-block;
  }

  .selected {
    background-color: #ffffc4 !important;
  }

  .comment-location-highlight {
    background-color: #80ff00 !important;
  }

  .line-wrapper {
    @include flex_box;
    @include box_orient_horizontal;
    border: 0;
    margin: 0;
    padding: 0;
  }

  .line-content {
    /*display: inline-block;*/
  }

  .line-endcap {
    /*width: 100% !important;*/
    @include box_flex_1;
    /*display: inline-block;*/
  }

  #selection-menu{
  }

  #file-and-annotations {
    @include box_flex_1;
    position: relative;
    @include box_sizing;
    margin: 0;
    padding: 0;
  }

  #file-display {
    position: absolute;
    top: 0;
    bottom: 0;
    overflow: auto;
    @include box_sizing;
  }

  #comments {
    border-left: 1px solid lightgray;
    overflow-y: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    padding-top: 5px;
    @include box_sizing;
    padding-right: 20px;
  }

  .comment-body {
    font-size: 10pt;
    padding: 3px;
  }

  [placeholder]:empty:before {
    content: attr(placeholder)  ;
    color: gray;
    font-style: italic; 
  }

  .comment-footer {
    font-size: 8pt;
    padding: 2px;
    font-style: italic;
  }

  .comment .comment-delete {
    display: none;
  }
  .comment:hover .comment-delete {
    display: inline;
  }

  .comment-in-edit {
    border-color: red;
    color: red;
  }

  .comment-saved {
    display: none;
    color: green;
  }

  .comment-focused {
    color: green;
    border: 2px solid orange;
  }

  .comment-delete {
    color: red;
    cursor: pointer;

    :hover {
      color: darkred;
    }

    :active {
      font-weight: bold;
    }
  }


}

/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar-collapse {
  display: none;
}

.main-collapse {
  display: none;
}

@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: auto;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }

  .sidebar-collapse {
    display: block;
  }

  .main-collapse {
    display: block;
  }
}
/* Sidebar toggles only display when the screen is small. */
@media (min-width: 768px) {
  .sidebar-toggle {
    display: none;
  }
}




/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}

.nav-sidebar li {
  list-style: none;
  display: block;
  position: relative;
}

.nav-sidebar li a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar .active a,
.nav-sidebar .active a:hover,
.nav-sidebar .active a:focus {
  color: #fff;
  background-color: #428bca;
}


/*
 * Main content
 */

.main {
  padding: 5px;
}
/*@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}*/
.main .page-header {
  margin-top: 0;
}

.information-page {
  padding-left: 40px;
  padding-right: 40px;
  h1 { text-align: left;}
}

